Fixed RSS overlapping with search

--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -97,7 +97,7 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 	display:inline;
 	width:130px;
 	padding:3px;
-	background:#fff url(../images/bg_search_input.gif) 118px 3px no-repeat;
+	background:#fff url(../images/bg_search_input.gif) 110px 3px no-repeat;
 	border:1px solid #e9e9e9;
 }
 #search_terms {
